* Newsfader lacked overflow: auto for longer news (index.css) [Bug 3595]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8867 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1475,8 +1475,10 @@ p.moderators
 #smfFadeScroller
 {
 	text-align: center;
-	padding: 2em;
-	height: 40px;
+	padding: 0 2em;
+	height: 6em;
+	overflow: auto;
+	margin: 1em 0;
 }
 
 /* Styles for the info centre on the  board index.
